<resources>
    <string name="app_name">Sieger</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="create_account">"Create your account"</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="retype_password">Retype Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="title_activity_homepage_dummy">HomepageDummyActivity</string>
    <string name="login_guide">Login to your account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="forgot_password_guide">To reset password, enter your email, press the button and check mail to follow instruction.</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="change_first_name">Change First Name</string>
    <string name="change_last_name">Change Last Name</string>
    <string name="save_settings">Save Settings</string>
    <string name="logout">Logout</string>
    <string name="create_a_new_tournament">Create A New Tournament</string>
    <string name="tournament_name">Tournament Name</string>
    <string name="location">Location</string>
    <string name="max_player">Max Player</string>
    <string name="registation_deadline">Registation Deadline</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="type_of_game_e_g_chess">Type of Game (e.g. Chess)</string>
    <string name="create">Create</string>
    <string name="change_username">Change Username</string>
    <string name="create_a_team">Create a Team</string>
    <string name="team_name">Team Name</string>
    <string name="doesn_t_have_an_account_yet">Doesn\'t have an account yet?</string>
    <string name="user_overview_template">This is user overview</string>
    <string name="team_overview_template">This is team overview</string>
    <string name="user_no_team">You haven\'t joined any teams</string>
    <string name="team_no_member">You have no member at the moment</string>
    <string name="home">Home</string>
    <string name="create_tournament">Create Tournament</string>
    <string name="create_team">Create Team</string>
    <string name="user_profile">User Profile</string>
    <string name="team_member">Team Member</string>
    <string name="team_tournaments">Team Tournaments</string>
    <string name="tournaments_invitation">Tournaments Invitation</string>
    <string name="info">Info</string>
    <string name="participants">Participants</string>
    <string name="delete_tournament">Delete Tournament</string>
    <string name="matches_info">Matches Info</string>
    <string name="schedules">Schedules</string>
    <string name="my_tournaments">My Tournaments</string>
    <string name="my_teams">My Teams</string>
    <string name="tournament_invitation">Tournament Invitation</string>
    <string name="game_card_template">This is game overview</string>
    <string name="invitation_overview_template">This is invitation overview</string>
    <string name="schedule_overview_template">This is schedule overview</string>
    <string name="tournament_overview_template">This is tournament overview</string>
    <string name="join_a_team">Join A Team</string>
    <string name="join_team_description">Please enter the team name and its password to join a team</string>
    <string name="team_password">Team Password</string>
    <string name="join_team">Join Team</string>
    <string name="type_of_game">Type of Game</string>
    <string name="match_type">Match Type</string>
    <string name="tournament_type">Tournament Type</string>
    <string name="participant_form">Participant Form</string>
    <string name="registration_deadline">Registration Deadline</string>
    <string name="update_info">Update Info</string>
    <string name="back">Back</string>
    <string name="cancel_tournament">Cancel Tournament</string>
    <string name="warning_you_can_t_revert_this">Warning! You can\'t revert this!</string>
    <string name="delete_team">Delete Team</string>

    <string-array name="sa_type_of_game">
        <item>Match Type</item>
        <item>KnockOut</item>
        <item>League</item>
        <item>KnockOutWithGroup</item>
    </string-array>

    <string-array name="sa_tournament_types">
        <item>Tournament Type</item>
        <item>PRIVATE</item>
        <!--Open tournament feature is not yet available in the current version of this app-->
        <!--<item>OPEN</item>-->
    </string-array>

    <string-array name="sa_participant_types">
        <item>Participant Form</item>
        <item>SINGLE</item>
        <item>TEAM</item>
    </string-array>

    <string-array name="sa_languages">
        <item>Change Language</item>
        <item>ENGLISH</item>
    </string-array>
</resources>
