<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_tournament_info"
        android:icon="@drawable/create_tournament_icon"
        android:title="@string/info" />

    <item
        android:id="@+id/navigation_participants"
        android:icon="@drawable/create_team_icon"
        android:title="@string/participants" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/schedule_icon"
        android:title="@string/schedules" />

    <item
        android:id="@+id/navigation_match_info"
        android:icon="@drawable/match_info_icon"
        android:title="@string/matches_info" />

    <item
        android:id="@+id/navigation_delete_tournament"
        android:icon="@drawable/warning_icon"
        android:title="@string/delete_tournament" />
</menu>
